--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            background-color: #ffffff;
+
         }
 
         .options button:hover {
