--- a/index.html
+++ b/index.html
@@ -167,7 +167,98 @@
                     { answer: "To enforce UI Policies.", correct: false },
                     { answer: "To log errors in the system.", correct: false }
                 ]
-            }
+            },
+            {
+    question: "11. What is a Business Rule in ServiceNow?",
+    options: [
+        { answer: "A client-side script that runs in response to form actions.", correct: false },
+        { answer: "A server-side script that runs when records are inserted, updated, or deleted.", correct: true },
+        { answer: "A rule that manages workflows.", correct: false },
+        { answer: "A script that enforces UI policies.", correct: false }
+    ]
+},
+{
+    question: "12. What is the role of a Workflow in ServiceNow?",
+    options: [
+        { answer: "To manage UI policies.", correct: false },
+        { answer: "To automate multi-step processes.", correct: true },
+        { answer: "To manage roles and permissions.", correct: false },
+        { answer: "To handle client-side form validation.", correct: false }
+    ]
+},
+{
+    question: "13. What table in ServiceNow holds SLA records?",
+    options: [
+        { answer: "incident_sla", correct: false },
+        { answer: "task_sla", correct: true },
+        { answer: "sla_definition", correct: false },
+        { answer: "task_table", correct: false }
+    ]
+},
+{
+    question: "14. What does the Service Catalog in ServiceNow provide?",
+    options: [
+        { answer: "A place for users to view system logs.", correct: false },
+        { answer: "A portal for requesting goods and services.", correct: true },
+        { answer: "A list of available SLAs.", correct: false },
+        { answer: "A tool for managing incidents.", correct: false }
+    ]
+},
+{
+    question: "15. What is the function of a UI Action in ServiceNow?",
+    options: [
+        { answer: "To validate data before form submission.", correct: false },
+        { answer: "To add buttons, links, and context menu items to forms and lists.", correct: true },
+        { answer: "To manage workflows.", correct: false },
+        { answer: "To trigger events in the system.", correct: false }
+    ]
+},
+{
+    question: "16. What is the primary use of a Script Include?",
+    options: [
+        { answer: "To include reusable server-side code.", correct: true },
+        { answer: "To handle client-side scripts.", correct: false },
+        { answer: "To validate form data.", correct: false },
+        { answer: "To manage workflow logic.", correct: false }
+    ]
+},
+{
+    question: "17. Which module in ServiceNow would you use to import data?",
+    options: [
+        { answer: "Data Load", correct: false },
+        { answer: "Import Sets", correct: true },
+        { answer: "Data Dictionary", correct: false },
+        { answer: "Service Catalog", correct: false }
+    ]
+},
+{
+    question: "18. What does the Scheduled Jobs module in ServiceNow allow you to do?",
+    options: [
+        { answer: "Manage UI Policies.", correct: false },
+        { answer: "Schedule jobs like data imports and reports.", correct: true },
+        { answer: "Schedule notifications for users.", correct: false },
+        { answer: "Run client-side scripts.", correct: false }
+    ]
+},
+{
+    question: "19. What does the CI (Configuration Item) represent in ServiceNow?",
+    options: [
+        { answer: "An item in the Service Catalog.", correct: false },
+        { answer: "A component in the CMDB that needs to be managed.", correct: true },
+        { answer: "An incident in the Incident table.", correct: false },
+        { answer: "A UI Action in ServiceNow.", correct: false }
+    ]
+},
+{
+    question: "20. Which ServiceNow table stores Incident data?",
+    options: [
+        { answer: "task_sla", correct: false },
+        { answer: "incident_sla", correct: false },
+        { answer: "incident", correct: true },
+        { answer: "task_incident", correct: false }
+    ]
+}
+
         ];
 
         // Function to render quiz
